<resources>
    <string name="app_name">NoticiasApp</string>
    <string name="select_interests">Datos personales</string>
    <string name="full_name_label">Nombre Completo</string>
    <string name="full_name_hint">Ingresa tu nombre completo</string>
    <string name="email_label">Correo Electrónico</string>
    <string name="email_hint">Ingresa tu correo electrónico</string>
    <string name="phone_label">Teléfono</string>
    <string name="phone_hint">Ingresa tu número de teléfono</string>
    <string name="interests_label">Selecciona tus intereses</string>
    <string name="sports">Deportes</string>
    <string name="music">Música</string>
    <string name="politics">Política</string>
    <string name="submit">Enviar</string>
    <string name="news_title">Título de la Noticia</string>
    <string name="news_content">Contenido de la noticia</string>
    <string name="titulo_noticia">Título de la Noticia</string>
    <string name="fecha_noticia">Publicado el: 19 Septiembre 2024</string>
    <string name="contenido_noticia">Este es el contenido de la noticia.</string>
    <string name="compartir">Compartir</string>
    <string name="guardar">Guardar</string>
    <string name="guardados">Noticias guardadas</string>
    <string name="recargar">Recargar noticias</string>
    <string name="escribir">Escribir noticia</string>
    <string name="dinero">Dinero</string>
    <string name="deportes">Deportes</string>
    <string name="entretenimiento">Entretenimiento</string>
    <string name="salud">Salud</string>
    <string name="abrir">Abrir menú</string>
    <string name="cerrar">Cerrar menú</string>
    <string name="opciones">Más opciones</string>
    <string name="nosotros">Nosotros</string>
    <string name="version">Version</string>
    <string name="newsApp">Aplicación de Noticias</string>
</resources>