<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Opción 1 -->
    <item
        android:id="@+id/action_more"
        android:icon="@android:drawable/ic_menu_more"
        android:title="@string/opciones"
        app:showAsAction="always">

        <!-- Submenú con dos opciones -->
        <menu>
            <item
                android:id="@+id/action_us"
                android:title="@string/nosotros" />
            <item
                android:id="@+id/action_version"
                android:title="@string/version" />
        </menu>
    </item>

    <!-- Opción 2 -->
    <item
        android:id="@+id/action_resend_order"
        android:icon="@drawable/refresh"
        android:title="@string/recargar"
        app:showAsAction="ifRoom" />

    <!-- Opción 3 -->
    <item
        android:id="@+id/action_modify_order"
        android:icon="@drawable/write"
        android:title="@string/escribir"
        app:showAsAction="ifRoom" />
</menu>
